# sqlite2yandexdisk

./: .gitmodules  CMakeLists.txt  Makefile  Readme.md  compile_commands.json  sqlite2yandexdisk.c  sqlite2yandexdisk.h  update_from_cloud.c  upload.c
